<resources>
    <string name="app_name">Splash</string>
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="date">date</string>
    <string name="add">Add</string>
    <string name="note_added_successfully">Note added successfully</string>
    <string name="ok">ok</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="update">update</string>
    <string name="update_note">update note</string>
</resources>
