<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    tools:context="com.route.NotesApp.AddNoteActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_note"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_margin="12dp"
        />

    <EditText
        android:id="@+id/update_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:maxLines="1"
        android:hint="@string/title"

        />

    <EditText
        android:id="@+id/update_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:lines="12"
        android:maxLines="12"
        android:hint="@string/content"
        />
    <TextView
        android:id="@+id/update_datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:maxLines="1"
        android:hint="@string/date"
        android:padding="12dp"
        />

    <TextView
        android:id="@+id/save_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/update"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:gravity="center"
        />


</LinearLayout>
